--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,3 +25,12 @@ body {
   color: var(--color-black);
   background-color: var(--color-primary);
 }
+h1,
+h2 {
+  font-weight: 400;
+}
+p {
+  margin-top: 0;
+  max-width: 80rem;
+  text-align: center;
+}
