--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -1,11 +1,11 @@
 .Input {
-  /* border: 2px solid plum; */
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-input {
+input[type='text'],
+input[type='number'] {
   width: 24rem;
   height: 4rem;
   outline: none;
