handle input enter key and disable button

--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -22,3 +22,7 @@
 .Button:active {
   transform: translateY(0.5rem);
 }
+.Button:disabled {
+  background-color: var(--color-disabled);
+  cursor: default;
+}
