--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -3,7 +3,6 @@
   height: 4rem;
   margin: 0 1rem;
   background-color: var(--color-secondary);
-  border: 2px solid var(--color-secondary);
   border: none;
   border-radius: 2px;
   outline: none;
@@ -17,9 +16,8 @@
 .Button:hover {
   background-color: var(--color-tertiary);
   color: var(--color-primary);
-  border: 2px solid var(--color-tertiary);
 }
-.Button:active {
+.Button:enabled:active {
   transform: translateY(0.5rem);
 }
 .Button:disabled {
