--- a/src/styles/SearchInput.css
+++ b/src/styles/SearchInput.css
@@ -1,3 +1,26 @@
 .SearchInput {
-  background-color: aquamarine;
+}
+.SearchInput__optionsContainer {
+  position: absolute;
+  width: 40rem;
+  margin: 1rem;
+  /* border: 2px solid gainsboro; */
+  border-radius: 2px;
+  /* margin-top: 2px; */
+  box-sizing: border-box;
+  list-style: none;
+  padding-left: 0;
+}
+.SearchInput__option {
+  padding: 1.1rem;
+  transition: all 0.2s ease;
+  font-size: 1.6rem;
+}
+.SearchInput__option:hover {
+  background-color: var(--color-disabled);
+  transform: scale(1.05);
+}
+.SearchInput__option:active {
+  background-color: var(--color-tertiary);
+  color: var(--color-primary);
 }
