--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -29,3 +29,17 @@ input:focus {
 input[type='submit']:focus {
   border: none;
 }
+
+@media only screen and (max-width: 768px) {
+  .Input {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media only screen and (max-width: 576px) {
+  input[type='text'],
+  input[type='search'],
+  input[type='number'] {
+    width: 80vw;
+  }
+}
