--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,9 @@ h2,
 h3 {
   font-weight: 400;
 }
+h3 {
+  margin: 0;
+}
 p {
   margin-top: 0;
   max-width: 80rem;
@@ -48,4 +51,31 @@ p {
   margin-left: 1rem;
   margin-top: 4px;
   max-width: 100%;
+}
+
+@media only screen and (max-width: 1200px) {
+  html {
+    font-size: 50%;
+  }
+}
+@media only screen and (max-width: 992px) {
+  body {
+  }
+}
+@media only screen and (max-width: 768px) {
+  p {
+    max-width: 60vw;
+  }
+}
+@media only screen and (max-width: 576px) {
+  html {
+    font-size: 37.5%;
+  }
+  p {
+    max-width: 80vw;
+  }
+}
+@media only screen and (max-width: 400px) {
+  body {
+  }
 }
