--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
 }
 input[type='text'],
 input[type='search'],
