--- a/src/styles/RadioGroup.css
+++ b/src/styles/RadioGroup.css
@@ -4,7 +4,9 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  border: none;
 }
+
 .RadioGroup__optionsContainer {
   display: flex;
 }
